# robotics_software_engineer

module_1_assignment/src/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task3.h
module_2_assignment/robotisim/robotisim/: CMakeLists.txt  package.xml
module_2_assignment/robotisim/robotisim/launch/: move_circle.launch.py  move_logarithmic.launch.py  task3.launch.py
module_2_assignment/robotisim/robotisim/src/: move_circle.cpp  move_logarithmic.cpp  task5_pub.cpp  task5_sub.cpp
